test/FAIL/setcmd/to_few_arguments/04_test_set.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to few arguments"
#-------

load boucle.o
set mem 0x1000 word